# wb-price-changer-bot

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: main.rs  utils.rs
