[package]
name = "wb-price-changer-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tgbot = { version = "0.30.0", features = ["webhook"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = "0.12.8"
serde_json = "1.0.128"
